Layout bug fixes

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,29 @@
-html,body{
-    height: 100%
+html{
+    height: 100%;
 }
 
 body{
+    min-height: 100%;
+    position: relative;
     font-family: 'Open Sans', sans-serif;
     color: #797979;
-    padding-top: 200px;
 }
 
-@media (min-width: 720px) {
-    .body {
-        padding-top: 200px;
+.header-row{
+    margin-top:80px;
+}
+
+@media (max-width: 720px) {
+    .header-row {
+        margin-top: 40px;
     }
 }
-@media (min-width: 720px) {
-    .body {
-    }
-}
+
+.footer {
+    position:absolute;
+    bottom:0;
+    width: 100%;
+ }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
@@ -30,7 +37,7 @@ p{
 .content-header .overline {
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-weight: 500;
+    font-weight: 700;
     position: relative;
     margin-bottom: 10px;
 }
@@ -44,20 +51,26 @@ p{
 }
 
 .profile-card {
-    max-width: 300px;
+    max-width: 280px;
     background-color: #FFF;
-    /*box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);*/
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     background-position: center;
     overflow: hidden;
     position: relative;
     margin: 10px auto;
-    cursor: pointer;
     padding: 0px !important;
     border-radius: 10px;
 }
 
-.profile-card img {
+.profile-card .bg {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    max-width: 100%;
+    display: block;
+    height: auto;
     transition: all linear 0.25s;
 }
 
